Fix Java 17 + Robolectric + Mockito issues for JitPack